examples/nginx-html/deployment-red.yaml
# Deployment azul
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
  namespace: colors
  labels:
    app: red
spec:
  selector:
    matchLabels:
      app: red
  replicas: 1
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: red
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-config
        configMap:
          name: red-configmap
# Configmap red
---
apiVersion: v1
kind: Service
metadata:
  name: red-service
  namespace: colors
spec:
  selector:
    app: red
  ports:
  - port: 80
    targetPort: 80
